--- a/DockerImages/second/Dockerfile
+++ b/DockerImages/second/Dockerfile
@@ -1,6 +1,7 @@
 FROM ubuntu:trusty
 MAINTAINER surya
 RUN apt-get update
+WORKDIR /tmp
 ADD https://github.com/surya35/Dockerlatest.git /master
 ADD http://download.oracle.com/otn-pub/java/jdk/8u131-b11/d54c1d3a095b4ff2b6607d096fa80163/jdk-8u131-linux-x64.rpm /java
 CMD ["/bin/bash"]
